Committed to registration screen

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-mustache')
     implementation('org.projectlombok:lombok')
     implementation('com.h2database:h2')
+    implementation('org.springframework.boot:spring-boot-starter-mustache')
 
     // JUnit5
     testImplementation("org.junit.platform:junit-platform-launcher:1.5.2")
