--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -1,6 +1,3 @@
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
-spring.jpa.properties.hibernate.dialect.storage_engine=innodb
-spring.datasource.hikari.jdbc-url=jdbc:h2:mem://localhost/~/testdb;MODE=MYSQL
-spring.h2.console.enabled=true
-server.servlet.encoding.force-response=true
+spring.security.oauth2.client.registration.google.client-id=97596445766-g5drv4vj1lj79sqb1rmsrv9v6ccgok1a.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope = profile,email
