--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ HELP.md
 .gradle
 .idea
 build/
-!gradle/wrapper/gradle-wrapper.jar
+
 !**/src/main/**/build/
 !**/src/test/**/build/
 
@@ -24,8 +24,7 @@ bin/
 *.iml
 *.ipr
 out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+
 
 ### NetBeans ###
 /nbproject/private/
@@ -38,4 +37,5 @@ out/
 .vscode/
 
 ##Google ##
-!**/src/main/resources/*.properties
+/src/main/resources/application.properties
+/src/main/resources/application-oauth.properties
