--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-mustache')
     implementation('org.projectlombok:lombok')
-    implementation('com.h2database:h2')
+    implementation('com.h2databa se:h2')
     implementation('org.springframework.boot:spring-boot-starter-mustache')
 
     // JUnit5
@@ -34,6 +34,9 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter:5.5.2")
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     annotationProcessor 'org.projectlombok:lombok'
+
+    implementation ('org.springframework.boot:spring-boot-starter-oauth2-client')
+    implementation ("com.h2database:h2")
 }
 
 test { // (2)
