--- a/build.gradle
+++ b/build.gradle
@@ -21,22 +21,27 @@ repositories {
 dependencies {
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-    implementation('org.springframework.boot:spring-boot-starter-mustache')
     implementation('org.projectlombok:lombok')
-    implementation('com.h2databa se:h2')
     implementation('org.springframework.boot:spring-boot-starter-mustache')
 
     // JUnit5
     testImplementation("org.junit.platform:junit-platform-launcher:1.5.2")
     testImplementation("org.junit.jupiter:junit-jupiter:5.5.2")
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    annotationProcessor 'org.projectlombok:lombok'
+
 
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation ("com.h2database:h2")
+
+    //mysql
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.27'
+
+
+
+
+
 }
 
 test { // (2)
