--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ out/
 ### VS Code ###
 .vscode/
 
-##Google ##
+### properties ###
 /src/main/resources/application.properties
 /src/main/resources/application-oauth.properties
+/src/main/resources/application-jwt.properties
