--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,10 @@ dependencies {
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
 
     //security
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    //oauth2
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
     //jwt
     implementation 'com.auth0:java-jwt:4.2.1'
